--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -414,7 +414,7 @@ body {
 /*---------------SUPPORT THE TIGERS - DONATE--------------*/
 
 .smallpage#supporttigers{
-    min-height: 40vh;
+    height: 40vh;
 }
 
 @media (min-height: 768px){
@@ -441,6 +441,11 @@ body {
 
 
 /*---------------How & Who-------------------------*/
+
+.page#howwho{
+    min-height: 85vh;
+}
+
 #howwho p{
     color: #000;
     padding: 0 9vw 0 9vw;
