--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -438,8 +438,8 @@ body {
 }
 
 @media (max-width: 768px){
-    #donatebtn{
-        margin-top: 10vw;
+    .donatebtn{
+        margin-top: 13vw;
     }    
 }
 
